Setting user's show page and some layout fix

--- a/styles/AdminPanel.module.css
+++ b/styles/AdminPanel.module.css
@@ -28,3 +28,11 @@
     text-align: center;
     font-size: 29px;
 }
+
+.details_button {
+    text-align: right;
+}
+
+.details_button > button {
+    margin: 10px;
+}
