--- a/styles/AdminTitle.module.css
+++ b/styles/AdminTitle.module.css
@@ -1,7 +1,16 @@
+.title_and_path {
+    text-align: left;
+}
+
+.title_and_path h4, .title_and_path span {
+    display: inline;
+}
+
 .styledPath {
     color: var(--color-gray-light);
-    font-size: 13px;
-    float: left;
+    font-size: 11px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .input {
@@ -16,4 +25,10 @@
 
 .titleButton {
     margin-top: -5px;
+}
+
+@media (max-width: 1200px) {
+  .styledPath {
+    display: none!important;
+   }
 }
