--- a/components/shared/AdminListTable/styles.module.css
+++ b/components/shared/AdminListTable/styles.module.css
@@ -20,10 +20,41 @@
   color: white!important;
 }
 
-.hover {
-  cursor: pointer;
+/* 
+estamos determinando que iremos apenas aplicar estilo nos elementos que seguirem 
+a ordem abaixo
+
+<* .admin_panel>
+  <table>
+    <thead>
+      <tr>
+        <th></th> -> aqui será aplicado o estilo
+      </tr>
+    </thead>
+  </table>
+</* .admin_panel>
+
+o mesmo se aplica nos demais estilos abaixo
+*/
+.admin_panel table thead tr th {
+  text-align: left;
 }
 
-.hover :hover {
-  color: #0056b3;
+.admin_panel table thead tr th:last-of-type {
+  text-align: center;
+}
+
+.admin_panel table tbody tr {
+  background-color: var(--color-background);
+  padding-right: 110px;
+}
+
+.admin_panel table tbody tr:hover {
+  color: white !important;
+}
+
+.admin_panel table tr td div:hover {
+  cursor: pointer;
+  color: #00cfff;
+  transition: color 0.2s;
 }
