--- a/components/shared/TitleAdminPanel/SearchAndIcon/styles.module.css
+++ b/components/shared/TitleAdminPanel/SearchAndIcon/styles.module.css
@@ -11,3 +11,13 @@
 .titleButton {
   margin-top: -5px;
 }
+
+.search_icon svg {
+  margin-top: 3.5px;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+
+.search_icon svg:hover {
+  color: #00cfff;
+}
