Creating hover and active colors variables, adding active menu on LateralMenu and AdminHeader and refactoring hover styles

--- a/components/shared/AdminHeader/styles.module.css
+++ b/components/shared/AdminHeader/styles.module.css
@@ -13,6 +13,10 @@
 
 .background a svg:hover {
   cursor: pointer;
-  color: #00cfff;
+  color: var(--color-hover);
   transition: color 0.2s;
+}
+
+.active {
+  color: var(--color-active);
 }
