--- a/components/shared/AdminHeader/styles.module.css
+++ b/components/shared/AdminHeader/styles.module.css
@@ -31,6 +31,20 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.profile span {
+  transition: color 0.2s;
+}
+
+.profile span:hover {
+  color: var(--color-hover);
+}
+
+.profile span:active {
+  color: var(--color-active);
 }
 
 @media screen and (max-width: 990px) {
@@ -43,6 +57,10 @@
   }
 
   .profile {
+    margin: 0;
+  }
+
+  .profile span {
     display: none;
   }
 }
